fix: Align Retirement and Relayer Accounts pages to common spacing

--- a/frontend/src/app/modules/contract-engine/configs/contract-config/contract-config.component.css
+++ b/frontend/src/app/modules/contract-engine/configs/contract-config/contract-config.component.css
@@ -1,6 +1,6 @@
 .actions__tabs {
     position: relative;
-    margin-bottom: 1.5rem;
+    margin-bottom: 40px;
 
     &::after {
         content: "";
